--- a/website/templates/africafund.html
+++ b/website/templates/africafund.html
@@ -37,16 +37,18 @@
   <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top ">
     <div class="container d-flex">
       <div class="contact-info mr-auto">
-        <i class="icofont-envelope"></i> <a href="mailto:contact@example.com">info@bccmadvisors.com</a>
+        <i class="icofont-envelope"></i> <a href="mailto:info@bccmadvisors.com">info@bccmadvisors.com</a>
         <i class="icofont-phone"></i> +254 20 3673592
       </div>
-      <div class="social-links">
+      <!--
+        <div class="social-links">
         <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
         <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
         <a href="#" class="skype"><i class="icofont-skype"></i></a>
         <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>
       </div>
+      -->
     </div>
   </div>
 
@@ -133,7 +135,7 @@
         
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left">
-            <img src="{% static 'website/img/africafund/elephant.jpg' %}" class="img-fluid" alt="">
+            <img src="{% static 'website/img/africafund/elephant-crop.jpg' %}" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Our Purpose</h3>
@@ -142,9 +144,6 @@
                 <br>
                 <br>
                 The strategy invests in publicly listed and late-stage consumer and technology-enabled businesses that exponentially enrich the lives of Africans, directly or otherwise. 
-                <br>
-                <br>
-
               <!-- more text here if needed -->
             </p>
           </div>
@@ -159,7 +158,7 @@
         
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-1" data-aos="fade-left">
-            <img src="{% static 'website/img/africafund/leopard-rock.jpg' %}" class="img-fluid" alt="">
+            <img src="{% static 'website/img/africafund/leopard-rock-crop.jpg' %}" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-2 content" data-aos="fade-right">
             <h3>Our Passion</h3>
@@ -173,7 +172,6 @@
               <br>
               <br>
               In the end, we are all about doing good through capitalism.
-
             </p>
             <p>
               <!-- more text here if needed -->
@@ -258,8 +256,6 @@
           <div>
               <br>
               <br>
-              <br>
-              <br>
           </div>
         </div>
 
@@ -279,7 +275,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <div class="icon"><i class="bx bx-building"></i></div>
               <h4>High-growth cities</h4>
               <p>Africa has 86 of the 100 world’s fastest  growing cities<a href="https://qz.com/africa/1486093/africas-fast-growing-cities-face-extreme-climate-change-risk/" target="_blank"><sup>1</sup></a>, has as many 1 million+ people cities as Europe<a href="https://www.un.org/en/events/citiesday/assets/pdf/the_worlds_cities_in_2018_data_booklet.pdf" target="_blank"><sup>2</sup></a> and is home to the world’s fastest growing middle-class<a href="https://www.afdb.org/fileadmin/uploads/afdb/Documents/Publications/Tracking_Africa%E2%80%99s_Progress_in_Figures.pdf" target="_blank"><sup>3</sup></a></p>
             </div>
@@ -287,7 +283,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="150">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class="bx bx-face"></i></div>
               <h4>A young, Vibrant Population</h4>
               <p>60% of Africa’s population is under 25 and the median age is 19 and the working-age population is expected to surpass both India and China by 2034<a href="https://www.mckinsey.com/industries/consumer-packaged-goods/our-insights/lions-still-on-the-move-growth-in-africas-consumer-sector" target="_blank"><sup>4</sup></a></p>
             </div>
@@ -295,7 +291,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div class="icon"><i class="bx bx-group"></i></div>
               <h4>Massive urban migration</h4>
               <p>Between 2018-2025, 190 million Africans  will relocate to urban centers where per  capita consumption is 79% greater<a href="https://www.mckinsey.com/industries/consumer-packaged-goods/our-insights/lions-still-on-the-move-growth-in-africas-consumer-sector" target="_blank"><sup>5</sup></a></p>
             </div>
@@ -303,7 +299,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="450">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
+              <div class="icon"><i class="bx bx-line-chart"></i></div>
               <h4>High population growth</h4>
               <p>Today, there are ~1.25 billion Africans. By 2050, that number is projected to  increase to over 2 billion</p>
             </div>
@@ -311,7 +307,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="600">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-slideshow"></i></div>
+              <div class="icon"><i class="bx bx-mobile-alt"></i></div>
               <h4>Digital Innovation</h4>
               <p>With hundreds of millions of young, tech-savvy Africans adopting mobile handsets, Africa is leap-frogging traditional industries with novel digital products and services</p>
             </div>
@@ -319,7 +315,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="750">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-arch"></i></div>
+              <div class="icon"><i class="bx bx-wifi-2"></i></div>
               <h4>Growing Internet Penetration</h4>
               <p>Internet penetration stands at 39% with the number of internet users in Africa growing by 40 million to 566 million as at end of 2019, up from 111 million in 2010<a href="https://www.internetworldstats.com/stats1.htm" target="_blank"><sup>6</sup></a></p>
             </div>
@@ -423,43 +419,37 @@
         </div>
 
         <div class="row" data-aos="fade-up">
-          <div class="col-lg-6">
+          <div class="col-lg-3">
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
-              <h3>Our Address</h3>
               <p>
+                <br>
                 BCCM Advisors (Kenya) Limited
+                <br>
                 Landmark Plaza, 13th Floor, Suite 23
+                <br>
                 Argwings Kodhek Road
+                <br>
                 PO Box 856 00606
+                <br>
                 Nairobi, Kenya
+                <br><br>
+                <a href="mailto:info@bccmadvisors.com">info@bccmadvisors.com</a>
+                <br>
+                +254 20 3673592
+                <br><br><br><br>
               </p>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
-            <div class="info-box  mb-4">
-              <i class="bx bx-envelope"></i>
-              <h3>Email Us</h3>
-              <p>info@bccmadvisors.com</p>
-            </div>
+          <!-- Google Map -->
+          <div class="col-lg-9 ">
+            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.7996165562463!2d36.80321131505572!3d-1.2947748990556285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f10c03accf0e9%3A0x1a3862bfb0782d34!2sLandmark%20Plaza%2C%20Argwings%20Kodhek%20Rd%2C%20Nairobi%2C%20Kenya!5e0!3m2!1sen!2sus!4v1607261446842!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
           </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="info-box  mb-4">
-              <i class="bx bx-phone-call"></i>
-              <h3>Call Us</h3>
-              <p>+254 20 3673592</p>
-            </div>
-          </div>
+          
         </div>
-      <!-- Google Map -->
-      <div class="col-lg-6 ">
-        <!--
-        <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
-      </div>
-      -->
-      </div>
+
+
 
     </section><!-- End Contact Section -->
 
