--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -10,10 +10,10 @@
   <title>BCCM Advisors</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
-  "{% static 'website/' %}"
+  
   <!-- Favicons -->
-  <link href="{% static 'website/img/favicon.png' %}" rel="icon">
-  <link href="{% static 'website/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+  <link href="{% static 'website/img/minneapolis/bccm-logo.png' %}" rel="icon">
+  <link href="{% static 'website/img/minneapolis/bccm-logo.png' %}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -66,7 +66,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#team">Who We Are</a></li>
           <li><a href="africafund.html">The Africa Fund</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact">Contact Us</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -153,25 +153,28 @@
 
           <div class="col-lg-4" data-aos="fade-up">
             <div class="box">
-              <span>01</span>
-              <h4>Lorem Ipsum</h4>
-              <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+              <span> 1</span>
+              <h4>Highlights</h4>
+              <p>Uncovering High Alpha Potential Opportunities
+                in Less Efficient and Niche Markets</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
             <div class="box">
-              <span>02</span>
-              <h4>Repellat Nihil</h4>
-              <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
+              <span> 2</span>
+              <h4>Highlights</h4>
+              <p>Uncovering High Alpha Potential Opportunities
+                in Less Efficient and Niche Markets</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="box">
-              <span>03</span>
-              <h4> Ad ad velit qui</h4>
-              <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
+              <span> 3</span>
+              <h4>Highlights</h4>
+              <p>Uncovering High Alpha Potential Opportunities
+                in Less Efficient and Niche Markets</p>
             </div>
           </div>
 
@@ -381,31 +384,61 @@
         </div>
 
         <div class="row" data-aos="fade-up">
-          <div class="col-lg-6">
+          <div class="col-lg-4">
             <div class="info-box mb-4">
-              <i class="bx bx-map"></i>
-              <h3>Our Address</h3>
+              <a href="home.html" target=""><h3>Minneapolis Office</h3></a>
               <p>
+                info@bccmadvisors.com
+                <br>
                 BCCM Advisors
+                <br>
                 5000 West 36th Street, Suite 200
+                <br>
                 St. Louis Park, MN 55416
+                <br>
+                +1 (612) 200-1740
+                <br>
+                <br>
               </p>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
-            <div class="info-box  mb-4">
-              <i class="bx bx-envelope"></i>
-              <h3>Email Us</h3>
-              <p>info@bccmadvisors.com</p>
+          <div class="col-lg-4">
+            <div class="info-box mb-4">
+              <h3>Naples Office</h3>
+              <p>
+                info@bccmadvisors.com
+                <br>
+                BCCM Advisors
+                <br>
+                4850 Tamiami Trail North, Suite 301
+                <br>
+                Naples, FL 34108
+                <br>
+                +1 (612) 200-1740
+                <br>
+                <br>
+              </p>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
-            <div class="info-box  mb-4">
-              <i class="bx bx-phone-call"></i>
-              <h3>Call Us</h3>
-              <p>+1 (612) 200-1740</p>
+          <div class="col-lg-4">
+            <div class="info-box mb-4">
+              <a href="africafund.html" target=""><h3>Kenya Office</h3></a>
+              <p>
+                info@bccmadvisors.com
+                <br>
+                BCCM Advisors (Kenya) Limited
+                <br>
+                Landmark Plaza, 13th Floor, Suite 23
+                <br>
+                Argwings Kodhek Road, PO Box 856 00606
+                <br>
+                Nairobi, Kenya
+                <br>
+                +254 20 3673592
+                <br>
+              </p>
             </div>
           </div>
 
@@ -413,8 +446,16 @@
 
         <div class="row" data-aos="fade-up">
 
-          <div class="col-lg-12 ">
-            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+          <div class="col-lg-4 ">
+            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2824.2751017646415!2d-93.34454498750318!3d44.93807518219319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87f620b395d9db31%3A0xdc22ea05aee54147!2s5000%20W%2036th%20St%20%23200%2C%20Minneapolis%2C%20MN%2055416!5e0!3m2!1sen!2sus!4v1607260679867!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+          </div>
+
+          <div class="col-lg-4 ">
+            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10272.425687994064!2d-81.81042133745372!3d26.2037856506247!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88db1e159a3e959b%3A0x2b72d16c34d3fc2e!2s4850%20Tamiami%20Trail%20N%20%23301%2C%20Naples%2C%20FL%2034103!5e0!3m2!1sen!2sus!4v1607260858741!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+          </div>
+
+          <div class="col-lg-4 ">
+            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.7996165562463!2d36.80321131505572!3d-1.2947748990556285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f10c03accf0e9%3A0x1a3862bfb0782d34!2sLandmark%20Plaza%2C%20Argwings%20Kodhek%20Rd%2C%20Nairobi%2C%20Kenya!5e0!3m2!1sen!2sus!4v1607261446842!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
           </div>
 
         </div>
@@ -432,7 +473,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h5>BCCM Advisors</h5>
+              <h5>Minneapolis</h5>
               <p>
                 BCCM Advisors<br>
                 5000 West 36th Street, Suite 200<br>
