--- a/static/website/css/mn-style.css
+++ b/static/website/css/mn-style.css
@@ -427,7 +427,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
+  height: auto;
   background: url("../img/minneapolis/minneapolis.jpg") top center;
   background-size: cover;
   position: relative;
