make the background photos responsive for both mobile and pc

--- a/static/website/css/mn-style.css
+++ b/static/website/css/mn-style.css
@@ -427,7 +427,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: auto;
+  height: 100vh;
   background: url("../img/minneapolis/minneapolis.jpg") top center;
   background-size: cover;
   position: relative;
@@ -489,6 +489,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 768px) {
   #hero {
     text-align: center;
+    height: auto;
   }
   #hero .container {
     padding-top: 40px;
