Make app responsive for ipad, fix text, change lollapalooza image

--- a/website/templates/africafund.html
+++ b/website/templates/africafund.html
@@ -68,26 +68,6 @@
           <li><a href="#philosophy">Our Philosophy</a></li>
           <li><a href="#didyouknow">Did You Know</a></li>
           <li><a href="#team">Team</a></li>
-          
-        <!-- DROP-DOWN MENU
-          <li class="drop-down"><a href="">Drop Down</a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="drop-down"><a href="#">Deep Drop Down</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li> 
-        -->
 
           <li><a href="#contact">Contact</a></li>
 
@@ -171,10 +151,7 @@
               Consequently, we intentionally invest in enterprises embracing technology to raise living standards by supporting job creation, increasing financial inclusion, improving standards of education and healthcare, transforming agricultural value chains, strengthening government efficacy, and providing consumer goods and services.
               <br>
               <br>
-              In the end, we are all about doing good through capitalism.
-            </p>
-            <p>
-              <!-- more text here if needed -->
+              Put simply, we belive in doing good through capitalism.
             </p>
           </div>
         </div>
@@ -187,16 +164,16 @@
       <div class="container">
         
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left">
-            <img src="{% static 'website/img/africafund/lollapalooza-for-website.png' %}" class="img-fluid" alt="">
+          <div class="col-lg-6 order-2 order-lg-2" data-aos="fade-left">
+            <img src="{% static 'website/img/africafund/lollapalooza-fred.png' %}" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
+          <div class="col-lg-6 pt-4 pt-lg-0 order-1 order-lg-1 content" data-aos="fade-right">
             <h3>Our Investment Philosophy</h3>
             <p class="font-italic">
               We believe African consumer and technology-focused companies offer a compelling investment opportunity due to a unique confluence of three pillars:
             </p>
             <p>
-              <ol type="i">
+              <ol type="I">
                 <li>A dramatically improved Regulatory and Business Environment that is promoting creative destruction and unleashing humankind’s entrepreneurial spirit.<br></li>
                 <li>An Emerging Middle Class supported by Education, Industrialization, Demographics and Urbanization.<br></li>
                 <li>A Lollapalooza Effect propelled by mobile phone penetration and rising internet use which are driving digital innovation in Agtech, Edtech, Fintech, Healthcare, Enterprise Software, Retail and Government.<br><br></li>
@@ -276,7 +253,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-building"></i></div>
-              <h4>High-growth cities</h4>
+              <h4>High-growth Cities</h4>
               <p>Africa has 86 of the 100 world’s fastest  growing cities<a href="https://qz.com/africa/1486093/africas-fast-growing-cities-face-extreme-climate-change-risk/" target="_blank"><sup>1</sup></a>, has as many 1 million+ people cities as Europe<a href="https://www.un.org/en/events/citiesday/assets/pdf/the_worlds_cities_in_2018_data_booklet.pdf" target="_blank"><sup>2</sup></a> and is home to the world’s fastest growing middle-class<a href="https://www.afdb.org/fileadmin/uploads/afdb/Documents/Publications/Tracking_Africa%E2%80%99s_Progress_in_Figures.pdf" target="_blank"><sup>3</sup></a></p>
             </div>
           </div>
@@ -284,15 +261,15 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="150">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-face"></i></div>
-              <h4>A young, Vibrant Population</h4>
-              <p>60% of Africa’s population is under 25 and the median age is 19 and the working-age population is expected to surpass both India and China by 2034<a href="https://www.mckinsey.com/industries/consumer-packaged-goods/our-insights/lions-still-on-the-move-growth-in-africas-consumer-sector" target="_blank"><sup>4</sup></a></p>
+              <h4>A Young, Vibrant Population</h4>
+              <p>60% of Africa’s population is under 25, the median age is 19 and the working-age population is expected to surpass both India and China by 2034<a href="https://www.mckinsey.com/industries/consumer-packaged-goods/our-insights/lions-still-on-the-move-growth-in-africas-consumer-sector" target="_blank"><sup>4</sup></a></p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-group"></i></div>
-              <h4>Massive urban migration</h4>
+              <h4>Massive Urban Migration</h4>
               <p>Between 2018-2025, 190 million Africans  will relocate to urban centers where per  capita consumption is 79% greater<a href="https://www.mckinsey.com/industries/consumer-packaged-goods/our-insights/lions-still-on-the-move-growth-in-africas-consumer-sector" target="_blank"><sup>5</sup></a></p>
             </div>
           </div>
@@ -300,7 +277,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="450">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-line-chart"></i></div>
-              <h4>High population growth</h4>
+              <h4>High Population Growth</h4>
               <p>Today, there are ~1.25 billion Africans. By 2050, that number is projected to  increase to over 2 billion</p>
             </div>
           </div>
@@ -332,7 +309,7 @@
 
         <div class="text-center">
           <h3>Fundamental Investors</h3>
-          <p> We are here to help you identify small to mid-cap investment opportunitites that are fundamentally sound.</p>
+          <p> We employ traditional scuttlebutt research and fundamental analysis to discover and invest in business models built on a strong moat.</p>
           <!-- button
             <a class="cta-btn" href="#">Call To Action</a>  
           -->
@@ -346,27 +323,12 @@
       <div class="container">
 
         <div class="section-title">
-          <span>Meet The Team</span>
-          <h2>Meet The Team</h2>
+          <span>Meet The Investment Team</span>
+          <h2>Meet The INvestment Team</h2>
 
         </div>
-          <!--  
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
-            <div class="member">
-              <img src="{% static 'website/img/team/team-2.jpg' %}" alt="">
-              <h4>Sarah Jhinson</h4>
-              <span>Product Manager</span>
-              <p>
-                Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
-              </p>
-              <div class="social">
-                <a href=""><i class="icofont-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-          -->
           <div class="row">
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
+            <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
               <div class="member">
                 <img src="{% static 'website/img/team/evansmugi.png' %}" alt="">
                 <h4>Evans Mugi, CAIA</h4>
@@ -388,21 +350,26 @@
                 </div>
               </div>
             </div>
-          <!--
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
-            <div class="member">
-              <img src="{% static 'website/img/team/team-3.jpg' %}" alt="">
-              <h4>William Anderson</h4>
-              <span>CTO</span>
-              <p>
-                Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
-              </p>
-              <div class="social">
-                <a href=""><i class="icofont-linkedin"></i></a>
+
+            <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
+              <div class="member">
+                <img src="{% static 'website/img/minneapolis/fred-steiner.jpg' %}" alt="">
+                <h4>Fred Steiner, CFA</h4>
+                <span>Portfolio Manager</span>
+                <p>
+                  Fred Steiner is responsible for security selection, risk management and portfolio construction for our Pan-Africa strategy. 
+                  Prior to re-joining BCCM Advisors, Fred earned an MBA from the Carlson School of Management at University of Minnesota where he graduated with distinction and was a Curtis L Carlson Scholarship recipient. 
+                  During the full-time business school program, Fred worked with a multi-family office, Sawmill Management as a Senior Analyst. 
+                  There he oversaw approximately $1 billion in public securities. 
+                  Prior to business school, Fred served as an Analyst and Associate at BCCM and worked in various roles at Signature Financial Partners. 
+                  Fred studied at University of Cape Town in 2008, graduated from Union College in 2009 with a Bachelor’s degree in Economics and Minor in History and is a CFA charterholder. 
+                  Fred is engaged in various charities and previously volunteered for Soccer 4 Hope while living in Cape Town, South Africa in 2010. 
+                </p>
+                <div class="social">
+                  <a href=""><i class="icofont-linkedin"></i></a>
+                </div>
               </div>
             </div>
-          </div>
-          -->
         </div>
 
       </div>
@@ -424,7 +391,7 @@
               <i class="bx bx-map"></i>
               <p>
                 <br>
-                BCCM Advisors (Kenya) Limited
+                <strong>BCCM Advisors (Kenya) Limited</strong>
                 <br>
                 Landmark Plaza, 13th Floor, Suite 23
                 <br>
@@ -446,9 +413,37 @@
           <div class="col-lg-9 ">
             <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.7996165562463!2d36.80321131505572!3d-1.2947748990556285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f10c03accf0e9%3A0x1a3862bfb0782d34!2sLandmark%20Plaza%2C%20Argwings%20Kodhek%20Rd%2C%20Nairobi%2C%20Kenya!5e0!3m2!1sen!2sus!4v1607261446842!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
           </div>
+
+          <div class="col-lg-3">
+            <div class="info-box mb-4">
+              <i class="bx bx-map"></i>
+              <p>
+                <br>
+                <strong>Minneapolis Office</strong>
+                <br>
+                BCCM Advisors
+                <br>
+                5000 West 36th Street, Suite 200
+                <br>
+                St. Louis Park, MN 55416
+                <br>
+                USA
+                <br><br>
+                <a href="mailto:info@bccmadvisors.com">info@bccmadvisors.com</a>
+                <br>
+                +1 (612) 200-1740
+                <br><br>
+                <br>
+                <br>
+              </p>
+            </div>
+          </div>
+
+          <div class="col-lg-9 ">
+            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5648.537314428667!2d-93.3427731265288!3d44.93820620488582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87f620b395d9db31%3A0xdc22ea05aee54147!2s5000%20W%2036th%20St%20%23200%2C%20Minneapolis%2C%20MN%2055416!5e0!3m2!1sen!2sus!4v1607435846879!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+          </div>
           
         </div>
-
 
 
     </section><!-- End Contact Section -->
@@ -460,7 +455,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>BCCM Advisors</span></strong>. All Rights Reserved 
+        &copy; Copyright <strong><span><a href="home.html">BCCM Advisors</a></span></strong>. All Rights Reserved 
         <br>
         <br>
       </div>
