Fixed some typos

--- a/website/templates/africafund.html
+++ b/website/templates/africafund.html
@@ -323,8 +323,8 @@
       <div class="container">
 
         <div class="section-title">
-          <span>Meet The Investment Team</span>
-          <h2>Meet The INvestment Team</h2>
+          <span>Meet The Team</span>
+          <h2>Meet The Investment Team</h2>
 
         </div>
           <div class="row">
@@ -380,7 +380,7 @@
       <div class="container">
 
         <div class="section-title">
-          <span>Contact</span>
+          <span>Contact Us</span>
           <h2>Contact Us</h2>
           <p>Get in touch with us.</p>
         </div>
