Minor finishing touches

--- a/website/templates/africafund.html
+++ b/website/templates/africafund.html
@@ -38,7 +38,7 @@
     <div class="container d-flex">
       <div class="contact-info mr-auto">
         <i class="icofont-envelope"></i> <a href="mailto:info@bccmadvisors.com">info@bccmadvisors.com</a>
-        <i class="icofont-phone"></i> +254 20 3673592
+        <i class="icofont-phone"></i> +1 (612) 200-1740
       </div>
       <!--
         <div class="social-links">
