--- a/static/website/css/afro-style.css
+++ b/static/website/css/afro-style.css
@@ -1475,9 +1475,55 @@ section {
   }
 }
 
-/* for i-pad */
-@media screen and (max-device-width: 1024px) {
-  #wrapper {
-      background-image: url("../img/africafund/nairobi-skyline.jpg");
+/*
+* FOR IPADS
+*/
+
+/* Page background-image landscape for iPad 3 */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (orientation: landscape)
+  and (-webkit-min-device-pixel-ratio: 2) {
+  #hero {
+    -webkit-background-size: 2024px 768px !important;
+    background-size: 2024px 768px !important;
+    background: url("../img/africafund/nairobi-skyline.jpg") no-repeat center top #000 !important;
+  }
+}
+/* Page background-image portrait for iPad 3 */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (orientation: portrait)
+  and (-webkit-min-device-pixel-ratio: 2) {
+  #hero {
+    -webkit-background-size: 2024px 768px !important;
+    background-size: 2024px 768px !important;
+    background: url("../img/africafund/nairobi-skyline.jpg") no-repeat center top #000 !important;
+  }
+}
+/* Page background-image landscape for iPad 1/2 */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (orientation: landscape)
+  and (-webkit-min-device-pixel-ratio: 1) {
+  #hero {
+    background: url("../img/africafund/nairobi-skyline.jpg") no-repeat center top #000 !important;
+    -webkit-background-size: 2024px 768px !important;
+    background-size: 2024px 768px !important;
+  }
+}
+/* Page background-image portrait for iPad 1/2 */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (orientation: portrait)
+  and (-webkit-min-device-pixel-ratio: 1) {
+  #hero {
+    background: url("../img/africafund/nairobi-skyline.jpg") no-repeat center top #000 !important;
+    -webkit-background-size: 5024px 2024px !important;
+    background-size: 5024px 2024px !important;
   }
 }
