--- a/static/website/css/mn-style.css
+++ b/static/website/css/mn-style.css
@@ -752,6 +752,59 @@ section {
   padding: 120px 0;
 }
 
+/*
+* FOR IPADS
+*/
+
+/* Page background-image landscape for iPad 3 */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (orientation: landscape)
+  and (-webkit-min-device-pixel-ratio: 2) {
+  .cta {
+    -webkit-background-size: 2024px 768px !important;
+    background-size: 2024px 768px !important;
+    background: url("../img/minneapolis/minneapolis.jpg") no-repeat center top #000 !important;
+  }
+}
+/* Page background-image portrait for iPad 3 */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (orientation: portrait)
+  and (-webkit-min-device-pixel-ratio: 2) {
+  .cta {
+    -webkit-background-size: 2024px 768px !important;
+    background-size: 2024px 768px !important;
+    background: url("../img/minneapolis/minneapolis.jpg") no-repeat center top #000 !important;
+  }
+}
+/* Page background-image landscape for iPad 1/2 */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (orientation: landscape)
+  and (-webkit-min-device-pixel-ratio: 1) {
+  .cta {
+    background: url("../img/minneapolis/minneapolis.jpg") no-repeat center top #000 !important;
+    -webkit-background-size: 2024px 768px !important;
+    background-size: 2024px 768px !important;
+  }
+}
+/* Page background-image portrait for iPad 1/2 */
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (orientation: portrait)
+  and (-webkit-min-device-pixel-ratio: 1) {
+  .cta {
+    background: url("../img/minneapolis/minneapolis.jpg") no-repeat center top #000 !important;
+    -webkit-background-size: 5024px 2024px !important;
+    background-size: 5024px 2024px !important;
+  }
+}
+
 .cta h3 {
   color: #fff;
   font-size: 28px;
