--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -12,8 +12,8 @@
   <meta content="" name="keywords">
   
   <!-- Favicons -->
-  <link href="{% static 'website/img/minneapolis/bccm-logo.png' %}" rel="icon">
-  <link href="{% static 'website/img/minneapolis/bccm-logo.png' %}" rel="apple-touch-icon">
+  <link href="{% static 'website/img/bccm-small-logo.png' %}" rel="icon">
+  <link href="{% static 'website/img/bccm-small-logo.png' %}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -65,9 +65,13 @@
           <li><a href="home.html">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#team">Who We Are</a></li>
-          <li><a href="africafund.html">The Africa Fund</a></li>
+          <li class="drop-down"><a href="">Funds</a>
+            <ul>
+              <li><a href="africafund.html">The Africa Fund</a></li>
+              <li><a href="smcap.html">The Small-Mid Cap Fund</a></li>
+            </ul>
+          </li>
           <li><a href="#contact">Contact Us</a></li>
-
         </ul>
       </nav><!-- .nav-menu -->
 
