--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -82,7 +82,7 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
       <h1></h1>
-      <h2>Uncovering High Alpha Potential Opportunities in Less Efficient and Niche Markets</h2>
+      <h2>Opportunities Unbounded By Time</h2>
       <a href="#about" class="btn-get-started scrollto">About Us</a>
     </div>
   </section><!-- End Hero -->
@@ -98,11 +98,11 @@
           <div class="col-lg-12 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>About Us</h3>
             <p class="font-italic">
-              BCCM Advisors is an alternative asset manager experienced in identifying fundamentally attractive investments. 
-              At our core exists a long-tenured investment team focused on uncovering these niche opportunities. 
-              Our public company ownership provides strategic leveraging of our deep experience and operational stability, coupled with our first class service providers, in support of our asset management model.
+              BCCM Advisors is an alternative asset manager focused on making equity investments in businesses that are on the right side of long-term trends. 
               <br>
-              At BCCM Advisors, we uncover high alpha potential opportunities in less efficient and niche markets for our family of private investment funds.
+              We believe one of the few competitive advantages in life are having a longer time horizon than your competitors.
+              <br> 
+              This view is so fundamental to our core beliefs that it extends to our operational backbone of being wholly owned by a public company.        
               <br><br><br>
             </p>  
           </div>
@@ -120,7 +120,9 @@
             <h3>History</h3>
             <p class="font-italic">
               Blue Clay Capital Management, LLC was founded in 2012 as a continuation of the fundamentally-focused small and mid-cap strategy the team employed at Whitebox Advisors. 
-              Late in 2017, Blue Clay’s investment management business was acquired by Air T, Inc., and re-named BCCM Advisors, LLC. Air T, Inc. is a publicly-traded firm on the NASDAQ market led by seasoned investor Nick Swenson, its Chairman and CEO.
+              Late in 2017, Blue Clay’s investment management business was acquired by Air T, Inc., and re-named BCCM Advisors, LLC. 
+              Air T, Inc. is a publicly-traded firm on the NASDAQ market led by seasoned investor Nick Swenson, its Chairman and CEO. 
+              In 2019, true to our roots of long-term focused investing, we launched the Blue Clay Pan-Africa Fund.
               <br>
             </p>
             <h3>Experience That Counts</h3>
@@ -139,8 +141,8 @@
             </p class="font-italic">
             <h3>Focus on Capital Preservation</h3>
             <p class="font-italic">
-              We seek to generate equity returns while at the same time preserving capital. 
-              A focus on capital preservation drives portfolio construction and individual position decisions, including proprietary systematic option and volatility overlays used to inform overall direction and exposures for certain hedged strategies.
+              Over the long run, the greatest tool to combat downside risk is investing in great businesses. 
+              In the short run, no company’s stock is immune to systemic risk, and as such, our investment theses are supported by proprietary systematic option and volatility overlays for certain hedged strategies.
               <br>
             </p>
           </div>
@@ -149,27 +151,29 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Why Us Section ======= -->
+    <!-- ======= Highlights Section ======= -->
     <section id="why-us" class="why-us">
       <div class="container">
 
         <div class="row">
-
           <div class="col-lg-4" data-aos="fade-up">
             <div class="box">
               <span> 1</span>
-              <h4>Highlights</h4>
-              <p>Uncovering High Alpha Potential Opportunities
-                in Less Efficient and Niche Markets</p>
+              <a href=" https://moiglobal.com/zppod-fred-steiner-2020/" target="_blank">
+              <h4>The African Opportunity</h4>
+                <p>Watch Fred Steiner, CFA discuss the opportunities on the African continent here.</p>
+              </a>
             </div>
           </div>
+        
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
             <div class="box">
               <span> 2</span>
-              <h4>Highlights</h4>
-              <p>Uncovering High Alpha Potential Opportunities
-                in Less Efficient and Niche Markets</p>
+              <a href="https://paga.frontify.com/d/WHnRJgG6NZvL" target="blank">
+              <h4>Our Investment in Paga</h4>
+                <p>Our Direct Investment in Paga  is helping expand financial inclusion in Nigeria. Learn more here</p>
+              </a>
             </div>
           </div>
 
@@ -185,7 +189,7 @@
         </div>
 
       </div>
-    </section><!-- End Why Us Section -->
+    </section><!-- End Highlights Section -->
 
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
